--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@ body {
 .header {
 	position: fixed;
 	width: 100%;
+	z-index: 10;
 	
 	display: flex;
 	justify-content: space-between;
-	font-family: 'Poiret One', cursive;		
+	font-family: 'Poiret One', cursive;	
+	text-shadow: 1px 2px 2px #000;	
 	
 }
 .title {
@@ -80,7 +82,7 @@ body {
 	margin-top: 2px;
 	font-size: 18px;
 }*/
-.news-section {
+/*.news-section {
 	display: flex;
 	position: absolute;
 	width: 100%;
@@ -100,12 +102,12 @@ body {
 }
 .news1, .news2, .news3 {
 	margin: 13px;
-}
+}*/
 .services-section {
 	margin: 0 200px;
 }
 .services {
-	margin-top: 200px;
+	margin-top: 160px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 20px 20px;
@@ -122,7 +124,7 @@ body {
 	box-shadow: 15px 7px 7px #000C38;
 	background: #002570;
 	color: #fff;
-	transition: 2s ease-in-out;
+	transition: 1s ease-out;
 }
 .serv {
 	margin: 15px;
@@ -162,11 +164,17 @@ footer {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+	opacity: 0;
+	transition: 1s ease-in-out;
+	
 }
-.phone {
+.phone a {
 	font-size: 22px;
-	font-weight: 800;
+	margin-top: 20px;
+	color: #000;
 }
-.phone h4 {
-	margin: 10px auto;
+
+.phone:hover, .maps:hover, .form:hover {
+	opacity: 1;
 }
