--- a/style.css
+++ b/style.css
@@ -24,11 +24,14 @@ body {
 	
 }
 .title {
-	margin-left: 10px;
+	margin-left: -1000px;
 	align-self: center;
+	transition: 1s ease-in-out;
 }
 .nav {
 	display: flex;	
+	margin-right: -1000px;
+	transition: 1s ease-in-out;
 }
 .nav h1 {
 	align-self: center;
@@ -45,6 +48,7 @@ body {
 }
 
 .beggin {
+	overflow: hidden;
 	width: 100%;
 	height: 100vh;
 	/*background-size: cover;
@@ -54,34 +58,20 @@ body {
 	justify-content: center;
 }
 .titles {
-	font-family: 'Poiret One', cursive;
-	font-size: 35px;
+
 	margin: 0 auto;
 	display: flex;
 	letter-spacing: 8px;
 	/*border-bottom: 2px solid #002570;*/
 	color: #002570;
 }
-.titles h4 {
-	margin-left: -5%;
-	position: absolute;
-	letter-spacing: 0;
-	border-bottom: 2px solid #002570;
+.titles img {
+	margin-top: 1000px;
+	max-width: 350px;
+	max-height: 350px;
+	transition: 1s ease-in-out;
 }
-.titles h3 {
-	margin-left: -4%;
-	margin-top: 84px;
-	position: absolute;
-	letter-spacing: 0;
-}
-/*.titles span {
-	letter-spacing: 0;
-	position: absolute;
-	-webkit-transform: rotate(-90deg); 
-	margin-left: -8px;
-	margin-top: 2px;
-	font-size: 18px;
-}*/
+
 /*.news-section {
 	display: flex;
 	position: absolute;
@@ -151,30 +141,86 @@ body {
 
 
 footer {
-	margin-top: 200px;
+	margin-top: 300px;
 	font-family: 'Raleway', sans-serif;
 	display: flex;
+	background: #002570;
+	overflow: hidden;
 }
 .phone, .maps, .form {
 	margin: 20px;
 	height: 300px;
 	width: 30%;
 	padding: 10px;
-	border: 4px double #002570;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	opacity: 0;
+	margin-top: 500px;
 	transition: 1s ease-in-out;
 	
 }
+.maps {
+	border-radius: 5px;
+	grid-area: maps;
+}
 .phone a {
 	font-size: 22px;
+	text-align: center;
 	margin-top: 20px;
-	color: #000;
+	color: #fff;
+	text-shadow: 2px 2px 2px #000;
+	grid-area: phone;
 }
 
 .phone:hover, .maps:hover, .form:hover {
 	opacity: 1;
+}
+.form {
+	grid-area: form;
+}
+form {
+	display: flex;
+	flex-direction: column;
+}
+input {
+	padding: 10px;
+	margin-bottom: 20px;
+	border-radius: 4px;
+	border: 2px solid #88acf8;
+	color: #fff;
+	background: transparent;
+}
+select {
+	padding: 10px;
+	margin: 10px;
+	margin-top: 20px;
+	border-radius: 4px;
+	border: 2px solid #88acf8;
+	background: transparent;
+	color: #fff;
+}
+option {
+	background: transparent;
+	color: #000;
+}
+input[type=number]{
+
+	-webkit-appearance: textfield !important;
+    margin: 0;
+    -moz-appearance:textfield !important;
+}
+input[type=submit]{
+	margin: 0 auto;
+	margin-top: 15px;
+}
+.aviso {
+	grid-area: aviso;
+	padding: 5px;
+	text-align: center;
+	color: #fff;
+	background: #002570;
+}
+.aviso h3 a {
+	color: #fff;
 }
