--- a/responsive.css
+++ b/responsive.css
@@ -61,6 +61,7 @@
   .inicio, .servicio, .contacto { 
     color: #fff;
     text-decoration: none;
+    font-family: 'Poiret One', cursive;	
   }
 }
 
